gitignore, update demo app

--- a/app/src/main/res/layout/activity_horizontal.xml
+++ b/app/src/main/res/layout/activity_horizontal.xml
@@ -1,20 +1,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_16dp"
+        android:text="@string/activity_horizontal_normal"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/height_160dp"
         android:layout_gravity="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_16dp"
+        android:text="@string/activity_horizontal_reverse"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_horizontal_reverse"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/height_160dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"/>
 
