--- a/app/src/main/res/layout/activity_vertical.xml
+++ b/app/src/main/res/layout/activity_vertical.xml
@@ -1,8 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/nero">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_vertical"
