--- a/app/src/main/res/drawable/shape_decoration_gray_h_12_padding.xml
+++ b/app/src/main/res/drawable/shape_decoration_gray_h_12_padding.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:left="@dimen/margin_16dp"
-        android:right="@dimen/margin_16dp">
+        android:left="32dp"
+        android:right="32dp">
         <shape android:shape="rectangle">
-            <size android:height="4dp"/>
+            <size android:height="12dp"/>
             <solid android:color="#CCCCCC"/>
         </shape>
     </item>
