--- a/app/src/main/res/drawable/shape_decoration_green_w_8.xml
+++ b/app/src/main/res/drawable/shape_decoration_green_w_8.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:width="4dp"/>
-    <solid android:color="@android:color/black"/>
+    <size android:width="8dp"/>
+    <solid android:color="#00FF00"/>
 </shape>
