--- a/app/src/main/res/layout/activity_horizontal.xml
+++ b/app/src/main/res/layout/activity_horizontal.xml
@@ -1,31 +1,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical"
+  >
+
+  <TextView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_16dp"
+    android:text="@string/activity_horizontal_normal"
+    />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_16dp"
-        android:text="@string/activity_horizontal_normal"/>
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/recycler_horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/height_160dp"
+    android:layout_gravity="center"
+    />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_160dp"
-        android:layout_gravity="center"/>
+  <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_16dp"
+    android:text="@string/activity_horizontal_reverse"
+    />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_16dp"
-        android:text="@string/activity_horizontal_reverse"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_horizontal_reverse"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_160dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"/>
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/recycler_horizontal_reverse"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/height_160dp"
+    android:layout_gravity="center"
+    android:layout_marginTop="8dp"
+    />
 
 </LinearLayout>
