--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+  android:layout_gravity="center"
+  android:gravity="center"
+  android:orientation="vertical"
+  >
+
+  <Button
+    android:id="@+id/btn_main_vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:text="@string/activity_main_vertical"
+    android:textSize="14sp"
+    />
 
-    <Button
-        android:id="@+id/btn_main_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_main_vertical"
-        android:textSize="14sp"/>
-
-    <Button
-        android:id="@+id/btn_main_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_main_horizontal"
-        android:textSize="14sp"/>
+  <Button
+    android:id="@+id/btn_main_horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/activity_main_horizontal"
+    android:textSize="14sp"
+    />
 
 </LinearLayout>
