--- a/app/src/main/res/layout/row_landscape_item.xml
+++ b/app/src/main/res/layout/row_landscape_item.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="@color/nero"
+  android:orientation="horizontal"
+  android:paddingBottom="@dimen/margin_8dp"
+  android:paddingLeft="@dimen/margin_16dp"
+  android:paddingRight="@dimen/margin_16dp"
+  android:paddingTop="@dimen/margin_8dp"
+  >
+
+  <ImageView
+    android:id="@+id/img_landscape_item"
+    android:layout_width="@dimen/width_256dp"
+    android:layout_height="@dimen/height_171dp"
+    android:layout_gravity="center_vertical"
+    android:layout_marginRight="@dimen/margin_16dp"
+    android:contentDescription="@null"
+    android:scaleType="centerCrop"
+    />
+
+  <TextView
+    android:id="@+id/txt_landscape_item"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:background="@color/nero"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/margin_8dp"
-    android:paddingLeft="@dimen/margin_16dp"
-    android:paddingRight="@dimen/margin_16dp"
-    android:paddingTop="@dimen/margin_8dp">
-
-    <ImageView
-        android:id="@+id/img_landscape_item"
-        android:layout_width="@dimen/width_256dp"
-        android:layout_height="@dimen/height_171dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="@dimen/margin_16dp"
-        android:contentDescription="@null"
-        android:scaleType="centerCrop"/>
-
-    <TextView
-        android:id="@+id/txt_landscape_item"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_14sp"/>
+    android:layout_gravity="center_vertical"
+    android:layout_weight="1"
+    android:scaleType="centerCrop"
+    android:textColor="@color/white"
+    android:textSize="@dimen/text_size_14sp"
+    />
 </LinearLayout>
