--- a/app/src/main/res/layout/row_title.xml
+++ b/app/src/main/res/layout/row_title.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="@color/nero"
+  android:orientation="vertical"
+  >
+
+  <TextView
+    android:id="@+id/txt_row_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/nero"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/txt_row_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_12dp"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_14sp"
-        android:textStyle="bold"/>
+    android:layout_marginLeft="@dimen/margin_16dp"
+    android:layout_marginRight="@dimen/margin_16dp"
+    android:layout_marginTop="@dimen/margin_12dp"
+    android:textColor="@color/white"
+    android:textSize="@dimen/text_size_14sp"
+    android:textStyle="bold"
+    />
 </LinearLayout>
